formatação do Javascript

--- a/Atividade1/calculadora.html
+++ b/Atividade1/calculadora.html
@@ -12,28 +12,29 @@
     <br>
     <section class="calculadora" id="corpoCalculadora">
         <aside class="calculadoraBotoes">
-            <h1 id="tela" aria-disabled="disabled"></h1>
-            <input type="text" disabled="disabled">
+            <br>
+            <h1 aria-disabled="disabled"></h1>
+            <input id="tela" type="number" disabled="disabled">
             <br> <br>
-            <button onclick="inserir7()" id="7">7</button>
-            <button onclick="inserir8()" id="8">8</button>
-            <button onclick="inserir9()" id="9">9</button>
-            <button onclick="inserirDivisao()" id="÷">÷</button>
+            <button inserir7>7</button>
+            <button onclick="inserir8()">8</button>
+            <button onclick="inserir9()">9</button>
+            <button onclick="inserirDivisao()">÷</button>
             <br>
-            <button onclick="inserir4()" id="4">4</button>
-            <button onclick="inserir5()" id="5">5</button>
-            <button onclick="inserir6()" id="6">6</button>
-            <button onclick="inserirMultiplicacao()" id="×">×</button>
+            <button onclick="inserir4()">4</button>
+            <button onclick="inserir5()">5</button>
+            <button onclick="inserir6()">6</button>
+            <button onclick="inserirMultiplicacao()">×</button>
             <br>
-            <button onclick="inserir1()" id="1">1</button>
-            <button onclick="inserir2()" id="2">2</button>
-            <button onclick="inserir3()" id="3">3</button>
-            <button onclick="inserirSubtracao()" id="-">-</button>
+            <button onclick="inserir1()">1</button>
+            <button onclick="inserir2()">2</button>
+            <button onclick="inserir3()">3</button>
+            <button onclick="inserirSubtracao()">-</button>
             <br>
-            <button onclick="inserir0()" id="0">0</button>
-            <button onclick="inserirVirgula()" id=".">.</button>
-            <button onclick="Calcular()" id="=">=</button>
-            <button onclick="inserirAdição()" id="+">+</button>
+            <button id="inserir0">0</button>
+            <button onclick="inserirVirgula()">.</button>
+            <button onclick="Calcular()">=</button>
+            <button onclick="inserirAdição()">+</button>
             <br><br>
         </aside>
     </section>
