Parte 2 da criação do index, adicionando logo e enfileirando as opções de guias

--- a/calculadora.html
+++ b/calculadora.html
@@ -16,7 +16,7 @@
             <h1 aria-disabled="disabled"></h1>
             <input id="tela" type="number" disabled="disabled">
             <br> <br>
-            <button inserir7>7</button>
+            <button onclick="inserir7()">7</button>
             <button onclick="inserir8()">8</button>
             <button onclick="inserir9()">9</button>
             <button onclick="inserirDivisao()">÷</button>
@@ -31,7 +31,7 @@
             <button onclick="inserir3()">3</button>
             <button onclick="inserirSubtracao()">-</button>
             <br>
-            <button id="inserir0">0</button>
+            <button onclick="inserir0()">0</button>
             <button onclick="inserirVirgula()">.</button>
             <button onclick="Calcular()">=</button>
             <button onclick="inserirAdição()">+</button>
