--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header>
         <div class="conjuntoLogoNome">
             <div class="logo">
-                <h6>loguinho</h6>
             </div>
 
             <div class="nome">
@@ -19,7 +18,7 @@
         </div>
 
         <nav>
-            <ul classe="outrasPaginas">
+            <ul class="outrasPaginas">
                 <li><a href="">Página Inicial</a></li>
                 <li><a href="">Calculadora</a></li>
                 <li><a href="">Lista de Tarefas</a></li>
