atualizações no index e calculadora

--- a/calculadora.html
+++ b/calculadora.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="calculadora.css">
+    <link rel="stylesheet" href="style.css">
     <script src="calculadora.js" defer></script>
     <title>Calculadora</title>
 </head>
 <body>
+    <header>
+        <div class="conjuntoLogoNome">
+            <div class="logo">
+            </div>
+
+            <div class="nome">
+                <h3>Página Inicial</h3>
+            </div>
+        </div>
+
+        <nav>
+            <ul class="outrasPaginas">
+                <li><a href="">Página Inicial</a></li>
+                <li><a href="">Calculadora</a></li>
+                <li><a href="">Lista de Tarefas</a></li>
+                <li><a href="">Pomodoro</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1 id="calculadoraTitulo">Calculadora super mega hiper potente!</h1>
     <br>
     <section class="calculadora" id="corpoCalculadora">
