Inserindo outras páginas, como Pomodoro e Lista de tarefas.

--- a/calculadora.html
+++ b/calculadora.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/iconePagina.png" type="image/png">
     <script src="calculadora.js" defer></script>
     <title>Calculadora</title>
 </head>
@@ -20,14 +21,14 @@
 
         <nav>
             <ul class="outrasPaginas">
-                <li><a href="">Página Inicial</a></li>
-                <li><a href="">Calculadora</a></li>
-                <li><a href="">Lista de Tarefas</a></li>
-                <li><a href="">Pomodoro</a></li>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="calculadora.html">Calculadora</a></li>
+                <li><a href="tarefas.html">Lista de Tarefas</a></li>
+                <li><a href="pomodoro.html">Pomodoro</a></li>
             </ul>
         </nav>
     </header>
-    <h1 id="calculadoraTitulo">Calculadora super mega hiper potente!</h1>
+    <h1>Calculadora super mega hiper potente!</h1>
     <br>
     <section class="calculadora" id="corpoCalculadora">
         <aside class="calculadoraBotoes">
