--- a/pomodoro.html
+++ b/pomodoro.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/iconePagina.png" type="image/png">
-    <title>Página inicial</title>
+    <script src="pomodoro.js" defer></script>
+    <title>Método Pomodoro</title>
 </head>
 <body>
     <header>
@@ -27,6 +28,5 @@
             </ul>
         </nav>
     </header>
-    
 </body>
 </html>
