--- a/tarefas.html
+++ b/tarefas.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/iconePagina.png" type="image/png">
-    <title>Página inicial</title>
+    <script src="tarefas.js" defer></script>
+    <title>Lista de Tarefas</title>
 </head>
 <body>
     <header>
@@ -27,6 +28,5 @@
             </ul>
         </nav>
     </header>
-    
 </body>
 </html>
