--- a/pomodoro.html
+++ b/pomodoro.html
@@ -28,6 +28,13 @@
             </ul>
         </nav>
     </header>
-    
+    <h1>Pomodoro</h1>
+    <div class="monitorPomodoro" id="corpoPomodoro" style="font-family:'Digital Numbers Regular';">
+        00:00
+    </div> 
+    <br>
+    <input class="textoPomodoro">
+
+</input>
 </body>
 </html>
