adicionei display flex

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -29,9 +29,11 @@
         </nav>
     </header>
     <h1>Pomodoro</h1>
+    <section class="telaPomodoro">
     <div class="monitorPomodoro" id="corpoPomodoro" style="font-family:'Digital Numbers Regular';">
         00:00
-    </div> 
+    </div>
+    </section> 
     <br>
     <input class="textoPomodoro">
 
