Mostrei e centralizei os numeros tela, depois adicionei o botão do teclado ao 0

--- a/calculadora.html
+++ b/calculadora.html
@@ -34,27 +34,27 @@
         <aside class="calculadoraBotoes">
             <br>
             <h1 aria-disabled="disabled"></h1>
-            <input id="tela" type="number" disabled="disabled">
+            <div id="tela" class="tela" type="number"> </div>
             <br> <br>
-            <button onclick="inserir7()">7</button>
-            <button onclick="inserir8()">8</button>
-            <button onclick="inserir9()">9</button>
-            <button onclick="inserirDivisao()">÷</button>
+            <button id="inserir7">7</button>
+            <button id="inserir8">8</button>
+            <button id="inserir9">9</button>
+            <button id="inserirDivisao">÷</button>
             <br>
-            <button onclick="inserir4()">4</button>
-            <button onclick="inserir5()">5</button>
-            <button onclick="inserir6()">6</button>
-            <button onclick="inserirMultiplicacao()">×</button>
+            <button id="inserir4">4</button>
+            <button id="inserir5">5</button>
+            <button id="inserir6">6</button>
+            <button id="inserirMultiplicacao">×</button>
             <br>
-            <button onclick="inserir1()">1</button>
-            <button onclick="inserir2()">2</button>
-            <button onclick="inserir3()">3</button>
-            <button onclick="inserirSubtracao()">-</button>
+            <button id="inserir1">1</button>
+            <button id="inserir2">2</button>
+            <button id="inserir3">3</button>
+            <button id="inserirSubtracao">-</button>
             <br>
-            <button onclick="inserir0()">0</button>
-            <button onclick="inserirVirgula()">.</button>
-            <button onclick="Calcular()">=</button>
-            <button onclick="inserirAdição()">+</button>
+            <button id="inserir0">0</button>
+            <button id="inserirVirgula">.</button>
+            <button id="Calcular">=</button>
+            <button id="inserirAdição">+</button>
             <br><br>
         </aside>
     </section>
