alterando cor de fundo e criando botões na página do temporizador Pomodoro

--- a/calculadora.html
+++ b/calculadora.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
     </header>
-    <h1>Calculadora super mega hiper potente!</h1>
+    <h1 class="titulo">Calculadora super mega hiper potente!</h1>
     <br>
     <section class="calculadora" id="corpoCalculadora">
         <aside class="calculadoraBotoes">
