--- a/pomodoro.html
+++ b/pomodoro.html
@@ -28,15 +28,19 @@
             </ul>
         </nav>
     </header>
-    <h1>Pomodoro</h1>
+    <h1 class="titulo">Pomodoro</h1>
     <section class="telaPomodoro">
-    <div class="monitorPomodoro" id="corpoPomodoro" style="font-family:'Digital Numbers Regular';">
-        00:00
-    </div>
-    </section> 
-    <br>
-    <input class="textoPomodoro">
-
-</input>
+        <div class="monitorPomodoro" id="corpoPomodoro" style="font-family:'Digital Numbers Regular';"></div>
+        <br>
+        <br>
+        <input  class="inserirPomodoro">
+        <div class="botoesPomodoro">
+            <button class="inserirNumeros">Inserir</button>
+            <button class="inserirNumeros">+ 5:00</button>
+            <button class="inserirNumeros">Pausar</button>
+            <button class="inserirNumeros">Apagar</button>
+        </div>
+    </section>
 </body>
 </html>
+
