atualização de interface

--- a/calculadora.html
+++ b/calculadora.html
@@ -10,13 +10,8 @@
 </head>
 <body>
     <header>
-        <div class="conjuntoLogoNome">
-            <div class="logo">
-            </div>
-
-            <div class="nome">
-                <h3>Página Inicial</h3>
-            </div>
+        <div class="nome">
+            <h2>Alisson Formento</h2>
         </div>
 
         <nav>
