--- a/index.html
+++ b/index.html
@@ -5,28 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/iconePagina.png" type="image/png">
+    <script src="index.js" defer></script>
     <title>Página inicial</title>
 </head>
 <body>
     <header>
-        <div class="conjuntoLogoNome">
-            <div class="logo">
-            </div>
-
-            <div class="nome">
-                <h3>Página Inicial</h3>
-            </div>
-        </div>
-
-        <nav>
-            <ul class="outrasPaginas">
-                <li><a href="index.html">Página Inicial</a></li>
-                <li><a href="calculadora.html">Calculadora</a></li>
-                <li><a href="tarefas.html">Lista de Tarefas</a></li>
-                <li><a href="pomodoro.html">Pomodoro</a></li>
-            </ul>
+        <nav class="outrasPaginas esconder">
+                <h2><a href="index.html">Página Inicial</a></h2>
+                <h2><a href="calculadora.html">Calculadora</a></h2>
+                <h2><a href="tarefas.html">Lista de Tarefas</a></h2>
+                <h2><a href="pomodoro.html">Pomodoro</a></h2>
         </nav>
     </header>
-    
+    <div>
+        <div class="esconder">
+            <img class="fotoDePerfil" src="imagens/Foto para currículo.jpeg" alt="">
+        </div>
+        <div class="esconder">
+            <h1>Objetivo Profissional</h1>
+            <label>Estou em busca de oportunidades para provar meu potêncial e aumentar meu conhecimento em outras áreas de atuação no ramo da programação.</label>
+            <br>
+            <label for="">Melhorando minhas capacidades profissionais para construir soluções e usá-las para contribuir com as pessoas ao meu redor.</label>
+        </div>
+        <div class="esconder">
+            <h1>Resumo profissional</h1>
+            <label>Programador especializado em </label>
+            <a class="laranja">Java Script </a>
+            <label>e </label>
+            <a class="azul">Arduino </a>
+            <label>que está se aprimorando em </label>
+            <a class="azul">React </a>
+            <label>para melhorar o desenvolvimento web em seus trabalhos de interface.</label>
+            <label for="">Motivado o suficiente para procurar evoluir com determinação e esperança de fazer a diferença no local de trabalho.</label>
+        </div>
+        <div class="esconder">
+            <h1>Trajetória</h1>
+            <a >Portobello S.A. </a>
+            <label>- Jovem Aprendiz - 2023 - 2024</label>
+            <br>
+            <br>
+            <label>Desenvolvi um aplicativo para controle de estoque</label>
+        </div>
+        <div class="esconder">
+            <h1>Conhecimentos</h1>
+        </div>
+        <div class="esconder">
+            <h1>Habilidades</h1>
+        </div>
+        
+    </div>
 </body>
 </html>
