inserindo animação da foto de perfil

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Página inicial</title>
 </head>
 <body>
-    <header>
-        <nav class="outrasPaginas esconder">
+    <header class="esconder">
+        <nav class="outrasPaginas">
                 <h2><a href="index.html">Página Inicial</a></h2>
                 <h2><a href="calculadora.html">Calculadora</a></h2>
                 <h2><a href="tarefas.html">Lista de Tarefas</a></h2>
@@ -18,8 +18,12 @@
         </nav>
     </header>
     <div>
-        <div class="esconder">
-            <img class="fotoDePerfil" src="imagens/Foto para currículo.jpeg" alt="">
+        <div>
+            <section>
+                <aside class="nome">Alisson</aside>
+                <img class="fotoDePerfil esconder" src="imagens/Foto para currículo.jpeg" alt="">
+            </section>
+            
         </div>
         <div class="esconder">
             <h1>Objetivo Profissional</h1>
